Adding a few tests. Disabling them as the approach is too complex. Going back to a simpler scenario just with all dead cells in 3 by 3 matrix